/*
 * $Id: ChangeLog,v 1.218 2006-09-24 16:36:36 declan2005 Exp $
 */
/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/


2006-09-24 11:33 UTC-0500 Ciro Vargas C. <pcman2010@yahoo.com>
  * source/c_dialogs.c
    * now font dialog are showed correctly in all ways

2006-09-22 14:40 UTC-0500 Ciro Vargas C. <pcman2010@yahoo.com>
  * source/h_report.prg
    * changed report resolution from medium to low, in order increase print speed

2006-09-20 14:04 UTC-0500 Ciro Vargas C. <pcman2010@yahoo.com>
  * source/h_report.prg
    * fixed problem with logic fields

2006-09-16 14:36 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * include/i_button.ch
  * source/h_button.prg
    * DISABLED clause added.
  * include/i_grid.ch
  * source/h_grid.prg
    * DISABLED and SUBCLASS clauses added.

2006-09-10 21:24 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/c_windows.c
    * Unified SetWindowStyleFlag() and GetWindowStyleFlag() to
      WindowStyleFlag() single function.
  * source/h_label.prg
    * ::Align property approachs WindowStyleFlag() function.
  * include/i_textbox.ch
  * source/h_textbox.prg
    * DISABLED clause added ( @...TEXTBOX...DISABLED ).

2006-09-03 07:36 UTC-0500 Ciro Vargas C. <pcman2010@yahoo.com>
  * include/oohg.ch
    * added common.ch in order to compile sucefully DEFAULT x TO Y

2006-09-02 21:04 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_grid.prg
    ! Fixed This.CellValue assignment.
  * source/h_textbox.prg
    * Don't move cursor to mouse's click position when masked textbox
      got focus via mouse click.
  * include/i_progressmeter.ch
    * Included missing HELPID and INVISIBLE clauses.
  * source/h_windows.prg
    * Few default values.

2006-08-27 12:45 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_menu.prg